--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -64,7 +64,7 @@
             <span class="txt1">
               Don't have account?
             </span>
-            <a class="txt2" href="#">
+            <a class="txt2" href="{% url "register" %}">
               create now
             </a>
           </div>
