--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -35,7 +35,7 @@
             <input type="password" name="password" id="password">
         </div>
         <div class="confirm-password-container">
-            <label for="password">Password:</label>
+            <label for="password">Confirm Password:</label>
             <input type="password" name="confirm_password" id="confirm_password">
         </div>
         <button>Register</button>
