--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,77 +1,53 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static "css/login.css" %}">
- 
-</head>
-
-<body>
-  <div class="limiter">
-    <div class="container-login100">
-
-      <div class="wrap-login100">
-    
-        <div class="login100-pic js-tilt">
-          <img
-            src="https://2.bp.blogspot.com/-l9nGy2e3PnA/XLzG5A6u_cI/AAAAAAAAAgI/31bl8XZOrTwN0kTN8c18YOG3OhNiTUrsQCLcBGAs/s1600/rocket.png"
-            alt="IMG">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Register</title>
+    <link rel="stylesheet" href="{% static "css/login.css" %}" />
+  </head>
+  <body>
+    <main>
+      <section class="hero">
+        <h1>SocialHub</h1>
+      </section>
+      <section class="parent-container">
+        <div class="child-container">
+          {% if messages %}
+            {% for message in messages %}
+              <h3>{{message}}</h3>
+            {% endfor %}
+          {% endif %}
+          <div class="titles">
+            <h1>Login</h1>
+            <p>Don't Have an Account? <a href="{% url "register" %}">Sign Up</a></p>
+          </div>
+          <form method="post" id="form-container">
+            {% csrf_token %}
+            <div class="username-container">
+              <input
+                type="text"
+                name="username"
+                id="username"
+                placeholder="Username"
+                required
+              />
+            </div>
+            <div class="password-container">
+              <input
+                type="password"
+                name="password"
+                id="password"
+                class="password"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <button type="submit" class="login-button">Login</button>
+          </form>
         </div>
-
-        <form method="POST"  class="login100-form validate-form">
-
-        {% if messages %}
-          {% for message in messages %}
-            <h3>{{message}}</h3>
-          {% endfor %}
-        {% endif %}
-
-        {% csrf_token %} 
-
-          <span class="login100-form-title">
-            <span style="color: red;">S</span>ocial<span style="color: red;">H</span>ub
-          </span>
-
-          <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-            <input class="input100" type="text" name="username" placeholder="Username">
-            <span class="focus-input100"></span>
-            <span class="symbol-input100">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-          </div>
-
-          <div class="wrap-input100 validate-input" data-validate="Password is required">
-            <input class="input100" type="password" name="password" placeholder="Password">
-            <span class="focus-input100"></span>
-            <span class="symbol-input100">
-              <i class="fa fa-lock" aria-hidden="true"></i>
-            </span>
-          </div>
-
-          <div class="container-login100-form-btn">
-            <button class="login100-form-btn">
-              Login
-            </button>
-          </div>
-
-          <div class="text-center mb-5 p-t-12">
-            <span class="txt1">
-              Don't have account?
-            </span>
-            <a class="txt2" href="{% url "register" %}">
-              create now
-            </a>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</body>
-
+      </section>
+    </main>
+  </body>
 </html>
