--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>Login</title>
     <link rel="stylesheet" href="{% static "css/login.css" %}" />
   </head>
   <body>
