--- a/core/templates/posts.html
+++ b/core/templates/posts.html
@@ -1,21 +1,29 @@
 {% extends "home.html" %} 
 
 {% block content %} 
-    {% for post in posts %}
-        <div class="post-card">
-            <img
-                src="{{ post.image.url }}"
-                alt="{{ post.title }} image"
-                class="post-card-image"
-                width='200'
-            />
-            <div class="post-card-content">
-                <a href="{% url 'post_detail' post.pk %}"><h3>{{ post.title }}</h3></a>
-                <p class="post-card-excerpt">{{ post.content|truncatechars:50 }}</p>
-                <div class="post-card-info">
-                    <span class="post-card-author">by {{ post.author.username }}</span>
-                    <span class="post-card-date">on {{ post.pub_date }}</span>
+    {% if posts %}
+        {% for post in posts %}
+        <div style="color:white;" class="post-card">
+            {% if post.image  %}
+                    <img
+                    src="{{ post.image.url }}"
+                    alt="{{ post.title }} image"
+                    class="post-card-image"
+                    width='200'
+                />
+                {% endif %}
+                <div class="post-card-content">
+                    {% comment %} <a href="{% url 'post_detail' post.pk %}"><h3>{{ post.title }}</h3></a> {% endcomment %}
+                    <p class="post-card-excerpt">{{ post.content|truncatechars:50 }}</p>
+                    <div class="post-card-info">
+                        <span class="post-card-author">by {{ post.author.username }}</span>
+                        <span class="post-card-date">on {{ post.pub_date }}</span>
+                    </div>
                 </div>
+                <a href="/{{post.id}}/delete_post/"><button>Delete Post</button></a>
             </div>
-        </div>
-{% endfor %} {% endblock content %}
+        {% endfor %}
+    {% else %}
+            <div>No posts available</div>
+    {% endif %}
+{% endblock content %}
