Added Following Feature

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -91,9 +91,18 @@
           {% else %}
             <div>No posts available</div>
           {% endif %}
-        {% endblock %}
+          {% endblock %}
+        </section>
+        <section class="right_most">
+          <h2>Followings</h2>
+          {% for following_profile in following_profiles %}
+          <div class="following-card">
+            <img width='100' src="{{following_profile.profile_pic.url}}" alt="">
+            <h4>{{following.user.username}}</h4>
+            <a href="#"><button>Unfollow</button></a>
+          </div>
+        {% endfor %}
       </section>
-      <section class="right_most"></section>
     </main>
   </body>
 </html>
