--- a/core/templates/create_post.html
+++ b/core/templates/create_post.html
@@ -5,19 +5,20 @@
 {% endblock %}
 
 {% block content %}
-  <form enctype="multipart/form-data" method="POST" class="max-w-md mx-auto bg-white p-8 ">
+  <form enctype="multipart/form-data" method="POST" class="w-full mx-auto bg-white p-8 ">
     {% csrf_token %}
 
     <div class="mb-4">
-      <input type="text" placeholder="Title" name="title" id="title" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" />
+      <input  required type="text" placeholder="Title" name="title" id="title" class="w-full px-3 py-2 border rounded-3xl focus:outline-none focus:border-blue-500 bg-slate-200 " />
     </div>
     <div class="mb-4">
-      <textarea name="content" id="content" placeholder="Content" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500"></textarea>
+      <textarea  name="content" id="content" placeholder="Content" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500 bg-slate-200 "></textarea>
     </div>
-    <div class="mb-4">
-      <input type="file" placeholder="Image" name="image" id="image" class="w-full px-3 py-2 border rounded-md focus:outline-none focus:border-blue-500" />
-    </div>
-    <div>
+    <label for="image" class="custom-file-upload">
+        <i class="fa-solid fa-upload"></i> Upload Image
+    </label>
+    <input id="image" type="file" name="image" style="display: none;" />
+    <div class="text-center mt-5">
       <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Create Post</button>
     </div>
   </form>
